<?xml version="1.0" encoding="utf-8"?>
<!--
   Copyright 2012 Frederik Hahne
   
   This file is part of Mensa UPB.
 
   Mensa UPB is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
   the Free Software Foundation, either version 3 of the License, or
   (at your option) any later version.
 
   Mensa UPB is distributed in the hope that it will be useful,
   but WITHOUT ANY WARRANTY; without even the implied warranty of
   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   GNU General Public License for more details.
 
   You should have received a copy of the GNU General Public License
   along with Mensa UPB.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="hello">Hello World, MensaActivity!</string>
    <string name="app_name">Mensa UPB</string>
    <string name="mensa_title">Mensa</string>
    <string name="pub_title">Gownsmen\'s Pub</string>
    <string name="bistro_title">Bistro Hotspot</string>
    <string name="one_way_title">One Way Snacks</string>
    <string name="wok_title">Wok n\' Roll</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_mensa">Mensa</string>
    <string name="menu_hotspot">Hotspot</string>
    <string name="menu_pub">Pub</string>
    <string name="menu_loc_other">Other...</string>
    <string name="menu_information">Opening Times</string>
    <string name="title_opening_times">Opening Times</string>
    <string name="about_version_info">Version 1.8-SNAPSHOT</string>
    <string name="about_content_description">Mensa UPB Logo</string>
    <string name="about_homepage">atomfrede.github.com/mensa-upb</string>
    <string name="about_copyright">Copyright Frederik Hahne 2012</string>
    <string name="about_gpl">Released under GPLv3</string>
    <string name="about_homepage_title">Homepage</string>
    <string name="about_using">Open Source Contributions</string>
    <string name="about_abs">ActionBarSherlock</string>
    <string name="about_viewpager">ViewPagerIndicator</string>
    <string name="about_jake">developed by Jake Wharton</string>
    <string name="menu_about">About</string>
    <string name="about_feedback">Feedback</string>
    <string name="feedback_provide_by">Send with...</string>
    <string name="crouton_info_webauth">Connected to webauth. Using cached data.</string>
   	<string name="about_crouton">Crouton</string>
   	<string name="crouton_info_offline">You\'re currently offline. Using local cache.</string>
   	<string name="crouton_error_mensa_failed">No meal available. Neither online nor in local cache.</string>
   	<string name="crouton_error_hotspot_failed">No meal available. Neither online nor in local cache.</string>
   	<string name="crouton_error_pub_failed">No meal available. Neither online nor in local cache.</string>
</resources>