<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/menu_information"
        android:icon="@drawable/ic_action_about"
        android:showAsAction="ifRoom"/>
    <item
        android:id="@+id/location"
        android:icon="@drawable/ic_location_place"
        android:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/menu_mensa"
                android:title="@string/menu_mensa"/>
            <item
                android:id="@+id/menu_hotspot"
                android:title="@string/menu_hotspot"/>
            <item
                android:id="@+id/menu_pub"
                android:title="@string/menu_pub"/>
            <item 
                android:id="@+id/menu_other_locations"
                android:title="@string/menu_loc_other"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_about"
        android:showAsAction="never"
        android:title="@string/menu_about"/>
</menu>